--- a/appsettings.json
+++ b/appsettings.json
@@ -7,9 +7,9 @@
   "AmazonS3Configuration": {
     "Profile": "local-test-profile",
     "Region": "ap-south-1",
-    "Accesskey": "XXXXXXXXXXXX",
-    "SecretKey": "XXXXXXXXXXXXX",
-    "BucketName": "XXXXX-XXXXXXX",
+    "Accesskey": "AKIARU2XTBX5RZGGWYYV",
+    "SecretKey": "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",
+    "BucketName": "animal-drawing",
     "Resources": "Resources",
     "BucketURL": "https://s3.ap-south-1.amazonaws.com"
   },
