--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "SecretKey": "XXXXXXXXXXXXX",
     "BucketName": "XXXXX-XXXXXXX",
     "Resources": "Resources",
-    "BucketURL": "https://s3.XXXXXXXX.amazonaws.com"
+    "BucketURL": "https://s3.ap-south-1.amazonaws.com"
   },
   "AllowedHosts": "*"
 }
