--- a/appsettings.json
+++ b/appsettings.json
@@ -6,12 +6,12 @@
   },
   "AmazonS3Configuration": {
     "Profile": "local-test-profile",
-    "Region": "ap-south-1",
-    "Accesskey": "AKIARU2XTBX5RZGGWYYV",
-    "SecretKey": "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",
-    "BucketName": "animal-drawing",
+    "Region": "XXXXXXXXXXXX",
+    "Accesskey": "XXXXXXXXXXXX",
+    "SecretKey": "XXXXXXXXXXXX",
+    "BucketName": "XXXXXXXXXXXX-XXXXXXXXXXXX",
     "Resources": "Resources",
-    "BucketURL": "https://s3.ap-south-1.amazonaws.com"
+    "BucketURL": "https://s3.XXXXXXXXXXXX.amazonaws.com"
   },
   "AllowedHosts": "*"
 }
